fix: no need of hiding overflow for the last page

--- a/app/css/index.pcss
+++ b/app/css/index.pcss
@@ -182,7 +182,6 @@ p.ellipsis {
 
 .swiper-slide:last-child {
   position: relative;
-  overflow: hidden;
   & div {
     position: absolute;
     bottom: 0;
